# YGO

./: README.md  constants.py  load.py  main.py  setup.cfg
src/: main.py
src/ygo/: __init__.py  card.py  load.py
src/ygo/collection/: card.py  coll.py
src/ygo/monster/: __init__.py
src/ygo/spell/: __init__.py  card.py
src/ygo/trap/: __init__.py
ygo/: __init__.py  card.py
ygo/collection/: card.py  coll.py
ygo/monster/: card.py
ygo/spell/: __init__.py
ygo/trap/: __init__.py  card.py
