[metadata]
name = YGO-python-wrapper-ionsai
version = 0.0.6
author = Uhr Wecker
author_email = janmenno@yahoo.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uhrwecker/YGO
project_urls =
    Bug Tracker = https://github.com/uhrwecker/YGO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src